fix: add banners swag
