# apis/goods_api/docs/swagger.json
@@ -5,6 +5,28 @@
     },
     "paths": {
         "/goods/v1/banners": {
+            "get": {
+                "description": "查询轮播图",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Banner"
+                ],
+                "summary": "查询轮播图",
+                "operationId": "/goods/v1/banners",
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "创建轮播图",
                 "consumes": [
